# bsky-feed

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_JOURNAL.md  Dockerfile  LICENSE  README.md  example_custom_filters.py  fly.toml  justfile  pyproject.toml  temp_check_db.py
.cursor/rules/: python.mdc
.github/workflows/: fly-deploy.yml
benchmarks/: conftest.py  test_spongebob_filter_benchmark.py
documents/: 2_firehose_cursor_issue_resolution.md  3_the_filter_paradox_mystery.md  4_the_persistent_old_posts_mystery.md  5_the_bluesky_docs_revelation.md  custom_filter_refactor_troubleshooting_log.md
scripts/: check_filter.py  create_test_post.py  delete_cursor.py  test_filter_locally.py
src/bsky_feed_generator/: __init__.py  publish_feed.py
src/bsky_feed_generator/server/: __main__.py  app.py  auth.py  config.py  data_filter.py  data_stream.py  database.py  run_server.py
src/bsky_feed_generator/server/algos/: feed.py
src/spongemock_bsky_feed_generator/: publish_feed.py
src/spongemock_bsky_feed_generator/server/: __main__.py  app.py  config.py  data_filter.py  data_stream.py  run_server.py
src/spongemock_bsky_feed_generator/server/algos/: feed.py
tests/: test_config.py  test_filters.py
